<resources>
    <string name="afirmativo">Si</string>
    <string name="app_name">CodeNutrient</string>
    <string name="code_reader_text">Coloca el código en el rectángulo del centro.</string>
    <string name="custom_view_finder_scanner_activity">CodeNutrient</string>
    <string name="dis_diabetes">Diabetes</string>
    <string name="dis_hipertension">Hipertensión</string>
    <string name="hint_date">Fecha de nacimiento</string>
    <string name="hint_diseases">¿Padeces alguna de estas enfermedades?</string>
    <string name="hint_estatura">Introduce tu estatura - cm</string>
    <string name="hint_female">Femenino</string>
    <string name="hint_gender">Selecciona tu genero</string>
    <string name="hint_lactancy">¿Actualmente estás lactando?</string>
    <string name="hint_male">Masculino</string>
    <string name="hint_peso">Introduce tu peso - KG</string>
    <string name="hint_pregnancy">¿Actualmente estás embarazada?</string>
    <string name="login_text">Inicia sesión con tu cuenta de google</string>
    <string name="negativo">no</string>
    <string name="send_info">Enviar infromación</string>
    <string name="header_product_register">Registrar consumo de este producto</string>
    <string name="portions_question">¿Cuantas porciones consumiste?</string>
    <string name="portions">Porciones</string>
    <string name="packages">Envase completo</string>
    <string name="select_portions">Selecciona el número de porciones</string>
    <string name="evaluate">Evaluar consumo</string>
    <string name="register_consumption">Registrar consumo</string>
    <string name="menu_camara">Escanear código</string>
    <string name="menu__info">Registrar información</string>
    <string name="menu_consultar_productos">Productos consumidos</string>
    <string name="menu_consultar_estadisticas">Estadísticas de consumo</string>
    <string name="menu_steps">Consultar pasos</string>
    <string name="menu_about">Acerca de</string>
    <string name="get_calendar">Consultar por fecha</string>
    <string name="single_date">Selecciona una fecha</string>
    <string name="range_dates">Selecciona un rango de fechas</string>
    <string name="step_tittle">Resumen mensual</string>
    <string name="logout">Cerrar sesión</string>
    <string-array name="steps_spinner">
        <item>-</item>
        <item>Calorías consumidas</item>
        <item>Calorías gastadas</item>
        <item>Pasos</item>
    </string-array>
</resources>
