<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_product_register"
            style="@style/Tittle"
            android:id="@+id/register_tittle"
            android:layout_marginTop="29dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portions_question"
            style="@style/Product_content"
            android:gravity="center"
            android:id="@+id/portions_question"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp">
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portions"
            style="@style/Product_content"
            android:id="@+id/porciones"
            android:visibility="gone"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packages"
            style="@style/Product_content"
            android:id="@+id/full"
            android:visibility="gone"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:id="@+id/linear_portions">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_portions"
                style="@style/Product_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/portion_spiner"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:id="@+id/send_product"
            android:text="@string/register_consumption"
            android:background="@drawable/buttonshape"
            android:drawableStart="@drawable/ic_send"
            android:drawableLeft="@drawable/ic_send"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</LinearLayout>